fix for broken junit tests; UrlUtil#isLocalHost GP-5943